--- a/template/jwt.html
+++ b/template/jwt.html
@@ -29,7 +29,11 @@
         }
 
         function generateToken() {
-            window.location = 'https://XXX.XXX.XXX/entreprise-partenaire/authorize?client_id=meg-test-interne&scope=user.read company.read accounting_firm.read sales&current_company=true&redirect_uri=http://localhost:8080/oauth/redirect'
+            var form = document.getElementById("monform");
+
+            form.submit();
+
+            //window.location = 'https://captation.beta.rca.fr/entreprise-partenaire/authorize?client_id=meg-test-interne&scope=user.read company.read accounting_firm.read sales&current_company=true&redirect_uri=http://localhost:8080/oauth/redirect'
         }
 
         function generate() {
@@ -73,7 +77,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <form class="col s12">
+            <form class="col s12" id="monform" method="post" action="/test">
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="material-icons prefix">account_circle</i>
@@ -118,7 +122,6 @@
             </form>
         </div>
     </div>
-
 </body>
 
 </html>
