ajout template resultat

--- a/template/jwt.html
+++ b/template/jwt.html
@@ -28,8 +28,8 @@
             return encodedSource;
         }
 
-        function generateToken() {
-            var form = document.getElementById("monform");
+        function generateToken(form) {
+            var form = document.getElementById(form);
 
             form.submit();
 
@@ -44,12 +44,12 @@
             var data = {
                 "sub": document.getElementById('sub').value,
                 "exp": Math.floor(Date.now() / 1000) + 6 * 30 * 24 * 3600,
-		"roles": [
-    		    "RCA_CLOUD_EXPERT_COMPTABLE",
-		        "E_COLLECTE_BO_CREA",
-		        "E_CREATION_CREA",
-		        "E_QUESTIONNAIRE_CREA"
-	        ],
+                "roles": [
+                    "RCA_CLOUD_EXPERT_COMPTABLE",
+                    "E_COLLECTE_BO_CREA",
+                    "E_CREATION_CREA",
+                    "E_QUESTIONNAIRE_CREA"
+                ],
                 "id_entreprise": document.getElementById('id_entreprise').value,
                 "rcaPartnerId": document.getElementById('rcaPartnerId').value
             };
@@ -75,9 +75,12 @@
 </head>
 
 <body>
+    <div>
+        <h1 class="center-align">JWT</h1>
+      </div>
     <div class="container">
         <div class="row">
-            <form class="col s12" id="monform" method="post" action="/test">
+            <form class="col s6 light-blue lighten-5" id="formLocal" method="post" action="/local">
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="material-icons prefix">account_circle</i>
@@ -107,21 +110,57 @@
                     </div>
                 </div>
                 <div class="row">
-                    <a class="waves-effect waves-light btn" onclick="generateToken();"><i class="material-icons left">cloud</i>Generer</a>
+                    <a class="waves-effect waves-light btn" onclick="generateToken('formLocal');"><i
+                            class="material-icons left">cloud</i>Local</a>
                 </div>
             </form>
-        </div>
-        <div class="row">
-            <form class="col s12">
+        
+            <form class="col s6 light-green lighten-5" id="formOAtuh20" method="post" action="/oauth20">
                 <div class="row">
                     <div class="input-field col s12">
-                        <textarea id="jwt" class="materialize-textarea"></textarea>
-                        <label for="textarea1">JWT</label>
+                        <i class="material-icons prefix">account_balance</i>
+                        <input type="text" id="domain" name="domain" value="captation.beta.rca.fr">
+                        <label for="name">Domaine :</label>
                     </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">account_balance</i>
+                        <input type="text" id="clientId" name="clientId" value="meg-test-interne">
+                        <label for="name">Client Id :</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">account_balance</i>
+                        <input type="text" id="clientSecret" name="clientSecret" value="xxxxxxxx">
+                        <label for="name">Client Secret :</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">account_balance</i>
+                        <input type="text" id="scopes" name="scopes" value="user">
+                        <label for="name">Scopes</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="checkbox col s12">
+                        <label>
+                            <input type="checkbox" id="currentCompany" name="currentCompany" checked="checked" />
+                            <span>Company courante</span>
+                        </label>
+                    </div>
+                </div>
+                <div class="row">
+                    <a class="waves-effect waves-light btn" onclick="generateToken('formOAtuh20');"><i
+                            class="material-icons left">cloud</i>OAuth2.0</a>
                 </div>
             </form>
         </div>
+
     </div>
+
 </body>
 
 </html>
